Fix letter spacing on bio heading on mobile

--- a/src/styles/Work.scss
+++ b/src/styles/Work.scss
@@ -103,7 +103,7 @@
   &__heading {
     text-align: left;
     width: 100%;
-    letter-spacing: 1rem;
+    letter-spacing: 0.7rem;
     font-size: 2rem;
     font-weight: 100;  
     padding-top: 3rem;
